--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
         <a class="logo link" lang="en" href="./index.html"
           >Web<span class="header-logo-studio">Studio</span>
         </a>
-        <ul class="list">
-          <li class="header-item">
+        <ul class="list nav-list">
+          <li class="nav-item">
             <a class="link header-link highlighted" href="./index.html"
               >Студия</a
             >
           </li>
-          <li class="header-item">
+          <li class="nav-item">
             <a class="link header-link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li class="header-item">
+          <li class="nav-item">
             <a class="link header-link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="list">
-        <li class="header-item">
+      <ul class="list contact-list">
+        <li class="contact-item">
           <a
-            class="header-mail link"
+            class="header-link link"
             lang="en"
             href="mailto:info@devstudio.com"
           >
             info@devstudio.com</a
           >
         </li>
-        <li class="header-item">
-          <a class="header-tel link" href="tel:+380961111111"
+        <li class="contact-item">
+          <a class="header-link link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -92,7 +92,7 @@
         </ul>
       </section>
       <section class="about">
-        <h2 class="about-title">Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="list about-list">
           <li class="about-item">
             <img
@@ -121,7 +121,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="list team-list">
           <li class="team-item">
             <img
@@ -174,7 +174,7 @@
         <ul class="list">
           <li class="address-item">
             <a
-              class="link address-link"
+              class="link address-link footer-link"
               href="https://goo.gl/maps/EqLQEGzMM47ydBD1A"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -183,7 +183,7 @@
           </li>
           <li class="address-item">
             <a
-              class="link footer-mail"
+              class="link footer-link"
               lang="en"
               href="mailto:info@example.com"
             >
@@ -191,7 +191,7 @@
             >
           </li>
           <li class="address-item">
-            <a class="link footer-tel" href="tel:+380991111111"
+            <a class="link footer-link" href="tel:+380991111111"
               >+38 099 111 11 11</a
             >
           </li>
