--- a/portfolio.html
+++ b/portfolio.html
@@ -19,32 +19,32 @@
         <a class="logo link" lang="en" href="./index.html"
           >Web<span class="header-logo-studio">Studio</span>
         </a>
-        <ul class="list">
-          <li class="header-item">
-            <a class="link header-link" href="./index.html">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="link header-link highlighted" href="./portfolio.html"
-              >Портфолио</a
+        <ul class="list nav-list">
+          <li class="nav-item">
+            <a class="link header-link highlighted" href="./index.html"
+              >Студия</a
             >
           </li>
-          <li class="header-item">
+          <li class="nav-item">
+            <a class="link header-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
             <a class="link header-link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="list">
-        <li class="header-item">
+      <ul class="list contact-list">
+        <li class="contact-item">
           <a
-            class="header-mail link"
+            class="header-link link"
             lang="en"
             href="mailto:info@devstudio.com"
           >
             info@devstudio.com</a
           >
         </li>
-        <li class="header-item">
-          <a class="header-tel link" href="tel:+380961111111"
+        <li class="contact-item">
+          <a class="header-link link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -53,7 +53,7 @@
     <main>
       <section class="portfolio">
         <h1 class="hidden">Наши работы</h1>
-        <ul class="list portfolio-list">
+        <ul class="list portfolio-filter-list">
           <li class="portfolio-item">
             <button class="portfolio-btn portfolio-highlighted" type="button">
               Все
@@ -249,7 +249,7 @@
         <ul class="list">
           <li class="address-item">
             <a
-              class="link address-link"
+              class="link address-link footer-link"
               href="https://goo.gl/maps/EqLQEGzMM47ydBD1A"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -258,7 +258,7 @@
           </li>
           <li class="address-item">
             <a
-              class="link footer-mail"
+              class="link footer-link"
               lang="en"
               href="mailto:info@example.com"
             >
@@ -266,7 +266,7 @@
             >
           </li>
           <li class="address-item">
-            <a class="link footer-tel" href="tel:+380991111111"
+            <a class="link footer-link" href="tel:+380991111111"
               >+38 099 111 11 11</a
             >
           </li>
